<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.PermissionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_location_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/location_find" />

        <RelativeLayout
            android:id="@+id/rl_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_location_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_5">

            <TextView
                android:id="@+id/tv_nice_to_meet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/kumbh_sans_regular"
                android:text="@string/hi_nice_to_meet_you"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/size_22" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_nice_to_meet"
                android:layout_marginStart="@dimen/margin_45"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_50"
                android:fontFamily="@font/kumbh_sans_regular"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="@string/set_your_location_to_start_exploring_restaurants_around_you"
                android:textColor="@color/darkGrayFont"
                android:textSize="@dimen/size_15" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/btn_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_text"
            android:layout_marginTop="@dimen/margin_30">

            <ProgressBar
                android:id="@+id/button_progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_current_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@drawable/button_drawable"
                android:text="@string/use_current_location"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_frame"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/set_your_location_manually"
            android:textColor="@drawable/text_color"
            android:textSize="@dimen/size_18"
            android:fontFamily="@font/kumbh_sans_regular"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/size_14"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/darkGrayFont"
            android:fontFamily="@font/kumbh_sans_regular"
            android:layout_marginLeft="@dimen/margin_32"
            android:layout_marginRight="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_40"
            android:text="@string/we_only_access_your_location_while_you_are_using_the_app_to_improve_your_experience"/>
    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>