<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBackground"
    tools:context=".UI.LoginMenuActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_20"
        android:background="@color/loginBackground"
        android:elevation="10dp"
        app:cardCornerRadius="30dp">

        <TextView
            android:id="@+id/tv_skip"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_20"
            android:paddingTop="@dimen/padding_10"
            android:paddingRight="@dimen/padding_20"
            android:paddingBottom="@dimen/padding_10"
            android:text="@string/skip"
            android:textSize="@dimen/size_15" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_zomato_logo"
        android:layout_width="@dimen/zomato_logo_width"
        android:layout_height="@dimen/zomato_logo_height"
        android:layout_below="@id/card_view_skip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:contentDescription="@string/todo"
        android:src="@drawable/zomato_logo" />

    <LinearLayout
        android:id="@+id/ll_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_zomato_logo"
        android:layout_marginTop="@dimen/margin_145">

        <com.example.zomatoclone.Comman.AutoScrollRecyclerView
            android:id="@+id/rv_dishes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:overScrollMode="never" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/signin_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_recyclerview"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_110"
        android:layout_marginRight="@dimen/margin_20">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ractengle_border"
                android:padding="@dimen/padding_11">

                <ImageView
                    android:id="@+id/iv_facebook"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/margin_8"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/facebook_circular_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_toEndOf="@+id/iv_facebook"
                    android:fontFamily="@font/kumbh_sans_regular"
                    android:text="@string/continu_with_facebook"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/size_18" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_facebook"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ractengle_border"
                android:padding="@dimen/padding_11">

                <ImageView
                    android:id="@+id/iv_google"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/margin_8"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/google_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_toEndOf="@+id/iv_google"
                    android:fontFamily="@font/kumbh_sans_regular"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/size_18" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_google"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ractengle_border"
                android:padding="@dimen/padding_11">

                <ImageView
                    android:id="@+id/iv_mail"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/margin_8"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_toEndOf="@+id/iv_mail"
                    android:fontFamily="@font/kumbh_sans_regular"
                    android:text="@string/continue_with_email"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/size_18" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_t_and_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin_menu"
        android:layout_marginTop="@dimen/margin_18">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/kumbh_sans_regular"
            android:text="@string/by_continuing_you_agree_to_our"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/ll_t_and_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_text"
            android:layout_marginTop="@dimen/margin_4"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_t_o_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kumbh_sans_regular"
                    android:text="@string/terms_of_service"
                    android:textSize="@dimen/size_12" />


                <TextView
                    android:id="@+id/tv_p_and_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:fontFamily="@font/kumbh_sans_regular"
                    android:text="@string/privacy_policy"
                    android:textSize="@dimen/size_12" />


                <TextView
                    android:id="@+id/tv_c_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:fontFamily="@font/kumbh_sans_regular"
                    android:text="@string/content_policy"
                    android:textSize="@dimen/size_12" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>